Fixed nav btn not showing on small screens Fixed title banner text not showing against background

--- a/css/main.css
+++ b/css/main.css
@@ -352,6 +352,7 @@ nav {
 				float: right;
 				padding: 0.1em 0 0.15em;
 				font-size: 1.5em;
+				display: none;
 			}
 
 .mobile-nav {
@@ -361,25 +362,22 @@ nav {
 	z-index: 10000;
 	text-align: center;
 	background-color: #fff;
-}
-
-.mobile-nav {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
 }
 
-.mobile-nav a {
-	padding: 0.8em 0;
-	color: #565a5b;
-	text-transform: uppercase;
-	display: block;
-	text-decoration: none;
-}
+	.mobile-nav a {
+		padding: 0.8em 0;
+		color: #565a5b;
+		text-transform: uppercase;
+		display: block;
+		text-decoration: none;
+	}
 
-.mobile-nav a:hover {
-	background-color: #f5f5f5;
-}
+	.mobile-nav a:hover {
+		background-color: #f5f5f5;
+	}
 
 /********************
  *** BREADCRUMBS ****
@@ -1351,6 +1349,10 @@ footer span {
 		display: none;
 	}
 
+	.main-nav .nav-toggle {
+		display: inline-block;
+	}
+
 	/* Home */
 	#home-title {
  		max-width: 100%;
@@ -1581,7 +1583,7 @@ footer span {
 		display: none;
 	}
 
-	.nav-toggle {
+	.main-nav .nav-toggle {
 		display: inline-block;
 	}
 
@@ -1763,9 +1765,12 @@ footer span {
 		margin-top: 0.5em;
 	}
 
-	.cart-item-qty {
-		display: none;
-		position: absolute;
+	.cart-item-qty input {
+	    display: none;
+	}
+
+	.table-cart, .cart-total {
+    	margin-bottom: 0;
 	}
 
 	.table-cart td.cart-item-remove {
